# agent-memory

./: .gitignore  LICENSE  PHASE_6_PR.md  README.md  SKILL.md  pyproject.toml  requirements.txt
agent_memory/: __init__.py  bench_server.py  bootstrap.py  classify.py  cli.py  consolidate.py  graph.py  learnings.py  mcp_server.py  mcp_server_main.py  memory.py  openclaw.py  startup_hook.py  surface.py
agent_memory/benchmarks/: README.md  __init__.py  run.py
agent_memory/hooks/: startup_hook.py
agent_memory/tests/: test_memory.py
agent_memory/tools/: __init__.py  auto_capture.py  capture.py  export_import.py  recall.py  startup.py
benchmarks/: run.py
docs/: BASELINE.md  BENCHMARK.md  PROGRESS.md  SPEC.md  VISION.md
hooks/agent-memory-capture/: HOOK.md  handler.ts
hooks/agent-memory-identity/: HOOK.md  handler.ts
src/: bootstrap.py  cli.py  consolidate.py  extract.py  memory.py  openclaw.py  surface.py
src/hooks/: __init__.py  startup_hook.py
src/tools/: auto_capture.py  capture.py  export_import.py  recall.py  startup.py
tests/: test_memory.py
ts-provider/: README.md  index.ts
