[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-memory"
version = "0.2.0"
description = "Memory system for autonomous agents — semantic recall, auto-capture, hierarchical storage"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "g1itchbot", email = "g1itchbot@users.noreply.github.com"}
]
keywords = ["ai", "agents", "memory", "embeddings", "semantic-search", "llm", "openclaw", "moltbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "sqlite-vec>=0.1.0",
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/g1itchbot8888-del/agent-memory"
Repository = "https://github.com/g1itchbot8888-del/agent-memory"
Issues = "https://github.com/g1itchbot8888-del/agent-memory/issues"

[project.scripts]
agent-memory = "agent_memory.cli:main"
agent-memory-mcp = "agent_memory.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_memory"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent_memory",
    "/README.md",
    "/LICENSE",
]
